			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

22-May-2003
~~~~~~~~~~~
Bugfix: Using the Edit MIME types button in the Options window opened the
	old directory. Refer people to the MIME-Editor application instead.

18-May-2003
~~~~~~~~~~~
Fixed focussing problems in Icons View (reported by Andrzej Radecki).
Updated French manual translation (Arnaud Calvo).

16-May-2003 (Release 1.3.9)
~~~~~~~~~~~
New icon for the filer (Geoff Youngs).
Updated it.po and AppInfo.xml (Yuri Bongiorno).

15-May-2003
~~~~~~~~~~~
Added Japanese translation (UTUMI Hirosi).
When a directory change is detected, wait a little before rescanning to
reduce flickering effect.

14-May-2003
~~~~~~~~~~~
Page Up and Page Down now work again in List View.

27-Apr-2003
~~~~~~~~~~~
Updated install script to use new XDG Base Directory spec (reported by
Vincent Lefevre).
Also install man pages under 'share/man'.

25-Apr-2003
~~~~~~~~~~~
Close stdout when running child processes for users running startx from the
console, since some terminal applications try to read from the console,
freezing X (Keith R. John Warno).
Forward scroll events on pinboard to window manager, and add option to
workaround *box issues (Matthew Weier O'Phinney).

24-Apr-2003
~~~~~~~~~~~
Using the bookmarks menu to open an unmounted mount point will mount it
(suggested by Arnaud Calvo).

17-Apr-2003
~~~~~~~~~~~
Updates for the new shared MIME database.

15-Apr-2003
~~~~~~~~~~~
Refresh refreshed the directory twice (because updating the MIME info triggers
a refresh too).

12-Apr-2003
~~~~~~~~~~~
Remove default GtkTreeView keys (they conflicted with the menus).
Fixed some minor cursor problems in List view.

10-Apr-2003
~~~~~~~~~~~
Winking now works in List view.

09-Apr-2003
~~~~~~~~~~~
Lasso selections now work in List view.

08-Apr-2003
~~~~~~~~~~~
The hack we have to use to draw pinboard icons on GTK+-2.0 doesn't work
on 2.2. Show a warning instead of crashing (reported by Keith R. John Warno).

03-Apr-2003