@@ -702,11 +702,11 @@ $ rox --bottom=</screen>
        </entry></row>
 
        <row><entry><guimenuitem>Bigger Icons</guimenuitem></entry><entry>
-       Increase the size of the icons. Turns of Automatic mode.
+       Increase the size of the icons. Turns off Automatic mode.
        </entry></row>
 
        <row><entry><guimenuitem>Smaller Icons</guimenuitem></entry><entry>
-       Reduce the size of the icons. Turns of Automatic mode.
+       Reduce the size of the icons. Turns off Automatic mode.
        </entry></row>
 
        <row><entry><guimenuitem>Automatic</guimenuitem></entry><entry>
@@ -838,9 +838,8 @@ $ rox --bottom=</screen>
     window goes into `target mode'; the operation happens to the next item you
     click on. Click on the window background, press <keycap>Escape</keycap>, or
     click with the right mouse button to cancel target mode. Target mode is
-    mainly useful with the <guilabel>Single-click navigation in filer
-    windows</guilabel> option and keys bound to the various menu entries.
-    </para><para>
+    mainly useful with the <guilabel>Single-click navigation</guilabel> option
+    and keys bound to the various menu entries. </para><para>
     Note that individual applications may add extra menu items to the
     top of this submenu when you click over them &mdash; see
     <xref linkend="AppDir"/> for details.
@@ -1117,12 +1116,6 @@ $ rox --bottom=</screen>
 	filer window at the same time.
       </entry></row>
 
-       <row><entry>
-         <guimenuitem>Show ROX-Filer Help</guimenuitem></entry><entry>
-	 Same as selecting ROX-Filer and choosing
-	 <guimenuitem>Help</guimenuitem> from the menu.
-       </entry></row>
-
     </tbody></tgroup></informaltable>
 
 
@@ -1172,7 +1165,7 @@ $ rox --bottom=</screen>
     <guimenuitem>Customise</guimenuitem> item from the bottom
     of the menu to create and open your own <filename>SendTo</filename>
     directory. Applications can be symlinked into this directory by dragging
-    them in with <keycap>Control</keycap> and <keycap>Shift</keycap> held down.
+    them in and choosing <guimenuitem>Link</guimenuitem> from the menu.
     </para><para>
     Opening the Send To menu via the main menu is rather slow, so it is
     normally opened by clicking the Menu mouse button over a file while
@@ -1336,7 +1329,7 @@ $ rox --bottom=</screen>
       passed the XID of the panel socket window when the directory is dragged
       onto the panel. You can use this to create a GtkPlug widget. An
       example applet (written in python) is available at
-      <ulink url="http://rox.sourceforge.net/applets.php3"/>
+      <ulink url="http://rox.sourceforge.net/applets.html"/>
     </para></step>
 
    </procedure>
@@ -2923,7 +2916,7 @@ $ rehash</screen>
 
    <refsect1><title>BUGS</title>
     <para>
-     Please report bugs to the developer mailing list: <ulink url="http://rox.sourceforge.net/contact.php3"/>.
+     Please report bugs to the developer mailing list: <ulink url="http://rox.sourceforge.net/contact.html"/>.
     </para>
    </refsect1>
 
@@ -3212,7 +3205,7 @@ EOF</screen>
 
   <bibliomixed>
    <abbrev>Choices</abbrev><citetitle>The ROX Choices system,
-    <ulink url="http://rox.sourceforge.net/choices.php3"/></citetitle>
+    <ulink url="http://rox.sourceforge.net/choices.html"/></citetitle>
   </bibliomixed>
 
   <bibliomixed>
@@ -3232,7 +3225,7 @@ EOF</screen>
 
   <bibliomixed>
    <abbrev>Wallpaper</abbrev><citetitle>Wallpaper backdrop control application
-    <ulink url="http://rox.sf.net/wallpaper.php3"/></citetitle>
+    <ulink url="http://rox.sf.net/wallpaper.html"/></citetitle>
   </bibliomixed>
 
   <bibliomixed>
