@@ -4,6 +4,7 @@
 
 22-May-2003
 ~~~~~~~~~~~
+Minor updates to the manual.
 Bugfix: Using the Edit MIME types button in the Options window opened the
 	old directory. Refer people to the MIME-Editor application instead.
 
